| Summary: | ASTERISK-30086: res_parking: Warn when invalid parking space requested | ||
| Reporter: | N A (InterLinked) | Labels: | |
| Date Opened: | 2022-05-30 15:53:15 | Date Closed: | 2022-06-06 16:44:08 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_parking |
| Versions: | 18.12.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Emits a warning when a user has explicitly requested a parking spot that is out of bounds and the request cannot be obliged. Behavior remains unchanged, as it still silently picks a different spot. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2022-05-30 15:53:16.026-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Friendly Automation (friendly-automation) 2022-06-06 16:44:09.455-0500 Change 18590 merged by Friendly Automation: res_parking: Warn if out of bounds parking spot requested. [https://gerrit.asterisk.org/c/asterisk/+/18590|https://gerrit.asterisk.org/c/asterisk/+/18590] By: Friendly Automation (friendly-automation) 2022-06-06 16:45:17.763-0500 Change 18579 merged by Friendly Automation: res_parking: Warn if out of bounds parking spot requested. [https://gerrit.asterisk.org/c/asterisk/+/18579|https://gerrit.asterisk.org/c/asterisk/+/18579] By: Friendly Automation (friendly-automation) 2022-06-06 16:52:50.355-0500 Change 18588 merged by Kevin Harwell: res_parking: Warn if out of bounds parking spot requested. [https://gerrit.asterisk.org/c/asterisk/+/18588|https://gerrit.asterisk.org/c/asterisk/+/18588] By: Friendly Automation (friendly-automation) 2022-06-06 16:53:03.390-0500 Change 18589 merged by Kevin Harwell: res_parking: Warn if out of bounds parking spot requested. [https://gerrit.asterisk.org/c/asterisk/+/18589|https://gerrit.asterisk.org/c/asterisk/+/18589] | ||